--- a/index.html
+++ b/index.html
@@ -6,17 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Speak</title>
     <link rel="stylesheet" href="/style.css" />
-    <script src="/app.js" type="text/javascript"></script>
   </head>
 
   <body>
-    <h1>Talk Banana</h1>
-    <textarea
-      id="txt-input"
-      placeholder="Put your sentence in English and We will convert it to Banana"
-    ></textarea>
-    <div class="container">
-      <button id="btn-translate">Translate</button>
-    </div>
+    <nav>
+      <div id="heading">BANANA TALK🔊-Talk to Minions</div>
+    </nav>
+    <main>
+      <textarea
+        id="txt-input"
+        placeholder="Put your sentence in English and We will convert it to Banana"
+      ></textarea>
+      <div class="container">
+        <button id="btn-translate">Translate To Banana</button>
+      </div>
+      <div class="h-output">Output will come here👇</div>
+      <div id="output"></div>
+      <script src="app.js" type="text/javascript"></script>
+    </main>
+    <footer>
+      <div class="h-footer">About⬇️</div>
+      <p>
+        Are you a fan of minions? Did you know that the gibberish they say is an
+        actual language. Use the translator to convert your text from English to
+        Minion speak or Banana language.
+      </p>
+    </footer>
   </body>
 </html>
