--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Banana Speak</title>
+    <title>Banana Talk</title>
+    <link
+      type="image/png"
+      sizes="16x16"
+      rel="icon"
+      href="Favicon/icons8-minion-16.png"
+    />
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="Favicon/icons8-minion-32.png"
+    />
+    <link
+      type="image/png"
+      sizes="96x96"
+      rel="icon"
+      href="Favicon/icons8-minion-96.png"
+    />
+    <link
+      type="image/png"
+      sizes="120x120"
+      rel="icon"
+      href="Favicon/icons8-minion-120.png"
+    />
     <link rel="stylesheet" href="/style.css" />
   </head>
-
   <body>
     <nav>
       <div id="heading">BANANA TALK🔊-Talk to Minions</div>
@@ -22,7 +45,6 @@
       </div>
       <div class="h-output">Output will come here👇</div>
       <div id="output"></div>
-      <script src="app.js" type="text/javascript"></script>
     </main>
     <footer>
       <div class="h-footer">About⬇️</div>
@@ -32,5 +54,6 @@
         Minion speak or Banana language.
       </p>
     </footer>
+    <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
